# steam-webapi-rust-sdk

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  ROADPLAN.md
src/: ISteamApps.rs  iplayer_service.rs  isteam_apps.rs  isteam_news.rs  isteam_user.rs  isteam_user_stats.rs  lib.rs  lib_test.rs  main.rs  main_test.rs  store_steampowered_com.rs  tests.rs
src/ISteamApps/: GetAppList.rs  GetAppList_test.rs
src/idota2match_570/: mod.rs
src/idota2match_570/get_heroes/: mod.rs  tests.rs
src/idota2match_570/get_league_listing/: mod.rs  tests.rs
src/idota2match_570/get_live_league_games/: mod.rs  tests.rs
src/idota2match_570/get_match_details/: mod.rs  tests.rs
src/idota2match_570/get_match_history/: mod.rs  tests.rs
src/idota2match_570/get_team_info_by_team_id/: mod.rs  tests.rs
src/iplayer_service/get_badges/: mod.rs  tests.rs
src/iplayer_service/get_owned_games/: mod.rs  tests.rs
src/iplayer_service/get_recently_played_games/: mod.rs  tests.rs
src/iplayer_service/get_steam_level/: mod.rs  tests.rs
src/isteam_apps/: get_app_list.rs  get_app_list_test.rs
src/isteam_apps/get_app_list/: mod.rs  tests.rs
src/isteam_news/get_news_for_app/: mod.rs  tests.rs
src/isteam_user/get_friend_list/: mod.rs  tests.rs
src/isteam_user/get_player_bans/: mod.rs  tests.rs
src/isteam_user/get_player_summaries/: mod.rs  tests.rs
src/isteam_user/resolve_vanity_url/: mod.rs  tests.rs
src/isteam_user_stats/get_global_achievement_percentages_for_app/: mod.rs  tests.rs
src/isteam_user_stats/get_number_of_current_players/: mod.rs  tests.rs
src/isteam_user_stats/get_player_achievements/: mod.rs  tests.rs
src/isteam_user_stats/get_schema_for_game/: mod.rs  tests.rs
src/isteam_user_stats/get_user_stats_for_game/: mod.rs  tests.rs
src/store_steampowered_com/: appdetails.rs  appdetails_test.rs  tests.rs
src/util/: mod.rs
test/idota2match_570/get_match_details/: 1461414523.json
test/idota2match_570/get_match_history/: 76561197960361544.json
