[package]
name = "steam-webapi-rust-sdk"
version = "0.0.1"
description = "Set of utility functions to access Steam Web API"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0 OR ISC OR LGPL-3.0-or-later OR CC-BY-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.138", features=["derive"] }
serde_json = { version="1.0.82" }
minreq = { version = "2.6.0", features=["https"] }
