[package]
name = "steam-webapi-rust-sdk"
version = "0.0.9"
homepage = "https://github.com/bohdaq/steam-webapi-rust-sdk"
repository = "https://github.com/bohdaq/steam-webapi-rust-sdk"
readme = "README.md"
description = "Rust SDK for the Steam Web API: player profiles, owned games, stats/achievements, app catalog and news, and Dota 2 data, with built-in response caching"
edition = "2021"
rust-version = "1.65"
authors = ["Bohdan Tsap <bohdan.tsap@tutanota.com>"]
keywords = ["steam", "webapi", "dota2", "gamedev", "sdk"]
categories = ["api-bindings", "caching", "game-development", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.138", features=["derive"] }
serde_json = { version="1.0.82" }
minreq = { version = "2.6.0", features=["https"] }
url-build-parse = "2.0.0"
